--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.3.1",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -31,6 +32,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "enzyme": "^3.11.0"
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.5.0"
   }
 }
